# agentic-triage-system

./: GESTIONE_ERRORI.md  README.md  pyproject.toml
data/: manuale_it.txt
docs/: LEZIONE_10B_CHROMADB.md
src/: client.py  logic.py  main.py  paths.py
src/memory/: __init__.py  extractors.py  session_manager.py
src/parsing/: parser.py
src/prompts/: triage_v1.py
src/rag/: policy_semantic.py
src/schemas/: ticket.py
src/storage/: store.py
src/tools/: enrichment.py  history_tools.py  logger.py  office_tools.py  registry.py
tests/: conftest.py  test_enrichment.py  test_extractors.py  test_history_tools.py  test_logic.py  test_main.py  test_parser.py  test_policy_semantic.py  test_router.py  test_session_manager.py  test_store.py  test_tools.py
